[package]
name = "basic_bitcoin"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
hex = "0.4.3"
bitcoin = "0.32.5"
candid = "0.10.13"
ic-cdk = "0.18.0"
serde = "1.0.132"
serde_bytes = "0.11.15"
leb128 = "0.2.5"
