[package]
name = "basic_bitcoin"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
hex = "0.4.3"
bitcoin = "0.32.7"
candid = "0.10.19"
ic-cdk = "0.20.0"
ic-cdk-bitcoin-canister = "0.2"
ic-cdk-management-canister = "0.1"
serde = "1.0.132"
serde_bytes = "0.11.15"
leb128 = "0.2.5"
