[package]
name = "basic_ethereum"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
alloy-consensus = "0.1.3"
alloy-eips = "0.1.3"
alloy-primitives = "0.7.6"
candid = "0.10"
evm-rpc-canister-types = "0.1.2"
# transitive dependency: ic-crypto-ecdsa-secp256k1 -> k256 -> ecdsa -> elliptic-curve -> crypto-bigint -> rand_core -> getrandom
# See https://forum.dfinity.org/t/module-imports-function-wbindgen-describe-from-wbindgen-placeholder-that-is-not-exported-by-the-runtime/11545/8
getrandom = { version = "*", default-features = false, features = ["custom"] }
ic-cdk = "0.15"
ic-secp256k1 = { git = "https://github.com/dfinity/ic", tag = "release-2025-07-03_03-27-base", package = "ic-secp256k1" }
ic-sha3 = { git = "https://github.com/dfinity/ic", tag = "release-2025-07-03_03-27-base", package = "ic-sha3" }
ic-ethereum-types = { git = "https://github.com/dfinity/ic", tag = "release-2025-07-03_03-27-base", package = "ic-ethereum-types" }
serde = "1.0"
serde_json = "1.0"
serde_bytes = "0.11.15"
num-traits = "0.2.19"
num = "0.4.3"
