[package]
name = "candid_type_generation"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
ic-cdk = "0.18.7"
ic-cdk-macros = "0.18.7"
candid = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_bytes = "0.11.17"

[build-dependencies]
ic-cdk-bindgen = "0.1.3"