[package]
name = "threshold_mock"
version = "0.1.0"
edition = "2021"

resolver = "2"

[profile.release]
lto = true
opt-level = 'z'
panic = 'abort'

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
candid = "0.10.10"
ed25519-dalek = "2.1"
# Enable `custom` feature of k256's getrandom dependency. See lib.rs for more details.
getrandom = { version = "0.2", features = ["custom"] }
hex = "0.4"
ic-cdk = "0.16.0"
ic-cdk-timers = "0.10.0"
ic-crypto-ed25519 = { git = "https://github.com/dfinity/ic" }
ic-crypto-secp256k1 = { git = "https://github.com/dfinity/ic" }
ic-crypto-internal-bls12-381-vetkd = { git = "https://github.com/dfinity/ic" }
ic-crypto-internal-bls12-381-type = { git = "https://github.com/dfinity/ic" }
ic-vetkd-utils = { git = "https://github.com/dfinity/ic" }
k256 = "0.13.4"
lazy_static = "1.4"
rand = "0.8"
rand_chacha = "0.3"
serde = "1"

[dev-dependencies]
assert_matches = "1.5.0"
pocket-ic = "5.0.0"
