[package]
name = "tokens_transfer"
version = "0.1.0"
edition = "2018"

## See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[build-dependencies]
candid = "0.7.4"

[dependencies]
candid = "0.7.4"
ic-cdk = { git = "https://github.com/dfinity/cdk-rs.git", branch = "roman-ledger-types" }
ic-cdk-macros = { git = "https://github.com/dfinity/cdk-rs.git", branch = "roman-ledger-types" }
ic-ledger-types = { git = "https://github.com/dfinity/cdk-rs.git", branch = "roman-ledger-types" }
ic-types = "0.2.1"
serde = "1.0.126"
serde_derive = "1.0.126"

[dev-dependencies]
tempfile = "3.2.0"