[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
path = "lib.rs"

[dependencies]
alloy-consensus = "0.1.3"
alloy-eips = "0.1.3"
alloy-primitives = "0.7.6"
candid = "0.10"
evm_rpc_types = "3.1.1"
evm_rpc_client = "0.4.0"
ic-canister-runtime = "0.2"
# transitive dependency: ic-crypto-ecdsa-secp256k1 -> k256 -> ecdsa -> elliptic-curve -> crypto-bigint -> rand_core -> getrandom
# See https://forum.dfinity.org/t/module-imports-function-wbindgen-describe-from-wbindgen-placeholder-that-is-not-exported-by-the-runtime/11545/8
getrandom = { version = "0.2", default-features = false, features = ["custom"] }
ic-cdk = "0.20"
ic-cdk-management-canister = "0.1.1"
ic-secp256k1 = "0.3.0"
ic-sha3 = "1.0.0"
ic-ethereum-types = "1.0.0"
serde = "1.0"
serde_json = "1.0"
serde_bytes = "0.11.15"
num-traits = "0.2.19"
num = "0.4.3"
