[package]
name = "btc"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin = "0.27.1"
byteorder = "1.4.3"
ic-btc-types = { git = "https://github.com/dfinity/bitcoin-library" }
ic-cdk = "0.3.1"
ic-cdk-macros = "0.3.1"
lazy_static = "1.4.0"
prost = "0.9"
serde = "1.0.132"

# Optional dependencies that are needed for the test bins, but not for the canister.
candid = {version = "0.7.8", optional = true}
garcon = {version = "0.2.3", optional = true}
ic-agent = {version = "0.10.0", optional = true}
tokio = { version = "1.14", features = ["full"], optional = true }
tonic = { version = "0.6.2", optional = true }

[build-dependencies]
prost-build = "0.9.0"
tonic-build = { version = "0.6.2", optional = true }

[[bin]]
name = "sync_demo"
path = "src/sync_demo.rs"
required-features = ["tonic", "tonic-build", "tokio"]

[[bin]]
name = "canister"
path = "src/main.rs"

[[bin]]
name = "adapter-shim"
path = "src/adapter-shim.rs"
required-features = ["tonic-build", "tokio", "candid", "ic-agent", "garcon", "tonic"]

[dev-dependencies]
bitcoin = {version = "0.27.1", features = ["rand"]} # needed for generating secp256k1 keys.
maplit = "1.0.2"
tempfile = "3.2.0"
