[package]
name = "backend"
version = "1.1.0"
edition = "2024"

[lib]
# cdylib produces a .wasm binary suitable for deployment as an ICP canister.
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0"
bytes = "1.5.0"
candid = "0.10"
ic-cdk = "0.20"
ic-stable-structures = "0.7"
ic-wasi-polyfill = "0.13"
image = { version = "0.25.1", features = ["png"], default-features = false }
prost = "0.11.0"
prost-types = "0.11.0"
serde = { version = "1.0", features = ["derive"] }
tract-onnx = { git = "https://github.com/sonos/tract", rev = "2a2914ac29390cc08963301c9f3d437b52dd321a" }
