[package]
name = "timer"
version = "0.1.0"
edition = "2024"

[lib]
# cdylib produces a .wasm binary suitable for deployment as an ICP canister.
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.20"
# The timers library is required for multiple and periodic timers.
ic-cdk-timers = "1.0"
