[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0"
candid = "0.10"
colorgrad = "0.6"
ic-cdk = "0.20"
image = { version = "0.24", features = ["png"], default-features = false }
qrcode-generator = "4.1"
serde = { version = "1.0", features = ["derive"] }
