[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
bitcoin = "0.32.5"
candid = "0.10"
ed25519-dalek = "2.1"
getrandom = { version = "0.2", features = ["custom"] }
hex = "0.4"
ic-cdk = "0.20"
sha2 = "0.10"
serde = "1.0"
serde_bytes = "0.11"
