[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"
# cdylib produces a .wasm binary suitable for deployment as an ICP canister;
# rlib allows integration tests to import types from this crate.
crate-type = ["cdylib", "rlib"]

[dependencies]
candid = "0.10"
der = { version = "0.7.9", features = ["alloc", "derive", "flagset", "oid"] }
ecdsa = { version = "0.16.9", features = ["alloc", "pkcs8", "pem"] }
ed25519 = { version = "2.2.3", features = ["alloc", "pkcs8", "pem"] }
ed25519-dalek = "2.1.1"
elliptic-curve = { version = "0.13.8", features = ["pkcs8"] }
getrandom = { version = "0.2", features = ["custom"] }
ic-cdk = "0.20"
ic-cdk-management-canister = "0.1.1"
k256 = "0.13.3"
pkcs8 = "0.10.2"
serde = "1.0"
sha2 = "0.10"
signature = "2.2.0"
spki = "0.7.3"
x509-cert = { version = "0.2.5", features = ["builder"] }

[dev-dependencies]
candid = "0.10"
openssl = "0.10"
pocket-ic = "15.0.0"
