[package]
name = "basic_bitcoin"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
hex = "0.4.3"
bitcoin = "0.28.1"
bs58 = "0.4.0"
candid = "0.9.10"
ic-cdk = "0.10.0"
ic-cdk-macros = "0.7.1"
ripemd = "0.1.1"
serde = "1.0.132"
sha2 = "0.10.2"
