[package]
name = "basic_dao"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
ic-cdk = "0.13.2"
ic-cdk-macros = "0.13.2"
ic-types = "0.7.0"
serde = "1.0.126"
serde_derive = "1.0.126"
candid = "0.10.7"
