[package]
name = "ber_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = { git = "https://github.com/dfinity/cdk-rs.git", rev = "c2ba198447deb422b16c2034274b7416b6e0134a", package = "ic-cdk" }
ic0 = { git = "https://github.com/dfinity/cdk-rs.git", rev = "c2ba198447deb422b16c2034274b7416b6e0134a", package = "ic0" }
